# spectacle

./: .syntastic_c_config  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/libspectacle/: CMakeLists.txt
src/libspectacle/include/: config.h
src/libspectacle/include/libspectacle/: args.h  engine.h  error.h  glew.h  glfw.h  io.h  spmath.h  util.h
src/libspectacle/src/: args.c  engine.c  error.c  glew.c  glfw.c  io.c  spmath.c  util.c
src/libspectacle/test/: CMakeLists.txt  test_sp_state.c
src/spectacle/: CMakeLists.txt
src/spectacle/src/: spectacle.c
